fixed input dark mode bug

--- a/source/Frontend/style/components/_maintext.scss
+++ b/source/Frontend/style/components/_maintext.scss
@@ -11,6 +11,7 @@
 /* dark mode */
 body.dark-mode {
     .main-text {
-        background: black;
+        //background: black;
+        background: #2A2D32;
     }
 }
