--- a/source/Frontend/style/css/main.css
+++ b/source/Frontend/style/css/main.css
@@ -164,6 +164,6 @@ body.dark-mode {
 
 /* dark mode */
 body.dark-mode .main-text {
-  background: black;
+  background: #2A2D32;
 }
 /*# sourceMappingURL=main.css.map */
